--- a/src/app/features/film-page/film-page.component.html
+++ b/src/app/features/film-page/film-page.component.html
@@ -2,25 +2,26 @@
   <div class="detail-page">
     <h1 class="detail-page__title">{{filmData.title}}</h1>
     <div class="detail-page__description">{{filmData.opening_crawl}}</div>
-    <div class="detail-page__release">Release: {{filmData.release_date}}</div>
+    <div class="detail-page__release">Release: {{filmData.release_date |  date: 'd.M.yyyy'}}</div>
   </div>
   <ng-container *ngIf="isLoaded$ | async">
     <ng-container *ngTemplateOutlet="tableStarships"></ng-container>
-<!--    <ng-container *ngTemplateOutlet="tablePeoples"></ng-container>-->
+    <!--    <ng-container *ngTemplateOutlet="tablePeoples"></ng-container>-->
     <ng-container *ngTemplateOutlet="tablePlanets"></ng-container>
   </ng-container>
 
   <ng-template #tableStarships>
     <h3>Star ship</h3>
     <app-sort-table
+      (rowEmit)="openStarShipDialog($event)"
       matSort
       [dataSource]="starships$ | async"
       [columns]="startShipsColumn">
-      <ng-template  columnName="Name" [header]="false" let-row="row" appTableColumnTemplate>
-      <div>{{row?.name}}</div>
+      <ng-template columnName="Name" [header]="false" let-row="row" appTableColumnTemplate>
+        <div>{{row?.name}}</div>
       </ng-template>
       <ng-template columnName="StarshipClass" let-row="row" appTableColumnTemplate>
-       {{row.starship_class}}
+        {{row.starship_class}}
       </ng-template>
       <ng-template columnName="Passengers" let-row="row" appTableColumnTemplate>
         {{row.passengers}}
@@ -31,7 +32,7 @@
       </ng-template>
 
       <ng-template columnName="Created" let-row="row" appTableColumnTemplate>
-        {{row.created | date: 'd/M/yyyy'}}
+        {{row.created |  date: 'd.M.yyyy'}}
       </ng-template>
     </app-sort-table>
   </ng-template>
@@ -43,7 +44,6 @@
         [dataSource]="peoples$ | async"
         [columns]="peopleColumn">
         <ng-template columnName="Name" let-row="row" appTableColumnTemplate>
-          <button (click)="test(row)">click</button>
         </ng-template>
         <ng-template columnName="Gender" let-row="row" appTableColumnTemplate>
           <!--        {{row.gender}}-->
@@ -66,8 +66,8 @@
   <ng-template #tablePlanets>
     <h3>Planets</h3>
     <app-sort-table
-      (rowEmit)="openDialog($event)"
       matSort
+      (rowEmit)="openPlanetsDialog($event)"
       [dataSource]="planets$ | async"
       [columns]="planetsColumn">
       <ng-template columnName="Name" let-row="row" appTableColumnTemplate>
