--- a/src/app/features/main-page/main-page.component.html
+++ b/src/app/features/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <ng-container *ngIf="!(isLoading$ | async); else loading">
       <mat-card *ngFor="let film of films$ | async" class="film-list__item">
         <mat-card-title>{{film.title}}</mat-card-title>
-        <mat-card-subtitle>{{film.release_date}}</mat-card-subtitle>
+        <mat-card-subtitle>{{film.release_date |  date: 'd.M.yyyy'}}</mat-card-subtitle>
         <mat-card-content>
           <p>{{film.producer}}</p>
           <p>{{film.opening_crawl}}</p>
